Updated Google Analytics code

--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 		ga('create', 'UA-62423657-1', 'auto');
+		ga('set', '&uid', 'UA-62423657-1');
 		ga('send', 'pageview');
 	</script>
 
